--- a/Ainswoth Time/src/index.css
+++ b/Ainswoth Time/src/index.css
@@ -69,3 +69,15 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.title{
+  text-align-last: center;
+
+}
+
+h2 {
+
+  margin-bottom: 0;
+
+}
+
