--- a/Ainswoth Time/src/App.css
+++ b/Ainswoth Time/src/App.css
@@ -21,12 +21,14 @@ flex-direction: column;
     align-items: center;
     justify-content: center;
    gap: 100px;
+   color: black;
    
 }
 
 #h3{
       text-align: center;
       margin-bottom: 0;
+      color: black;
 }
 
 .small-input2{
