--- a/Ainswoth Time/src/index.css
+++ b/Ainswoth Time/src/index.css
@@ -28,7 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background: #265073;
+  background: white;
   color: white;
  place-content: center;
 }
